--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "cra-template": "1.2.0",
     "framer-motion": "^11.18.0",
+    "lucide-react": "^0.473.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
