--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "three": "^0.172.0"
   },
   "scripts": {
     "start": "react-scripts start",
